--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   logger: ^2.6.1
   shared_preferences: ^2.5.3
+  adaptive_theme: ^3.7.1+2
+  flutter_bloc: ^9.1.1
+  auto_route: ^10.1.2
+  equatable: ^2.0.7
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  auto_route_generator: ^10.1.0
+  build_runner: ^2.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,6 +67,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
