--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   lottie: ^3.3.1
   flutter_svg: ^2.2.1
   pretty_dio_logger: ^1.4.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
