feat: create product list

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_svg: ^2.2.1
   pretty_dio_logger: ^1.4.0
   flutter_secure_storage: ^4.2.1
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
