feat: complete integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   flutter_secure_storage: ^9.0.0
   skeletonizer: ^1.4.3
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
